--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 dj-database-url==0.4.1
 Django==1.10.4
 gunicorn==19.6.0
+geopy==1.11.0
+gpxpy==1.1.2
 psycopg2==2.7
 whitenoise==3.2
 colour==0.1.2
